update previo al ngVLA-mex workshop diciembre 2025

--- a/radio_astronomy/radiointerferometria_basica.ipynb
+++ b/radio_astronomy/radiointerferometria_basica.ipynb
@@ -11,6 +11,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba9dc9e6-a609-4349-949f-58283727cfa8",
+   "metadata": {},
+   "source": [
+    "Las diapositivas de un curso nuestro de radiointerferometría básica pueden descargarse aquí:\\\n",
+    "https://drive.google.com/drive/folders/18FPqTvBxuOTfM7nmO341Z-_yBzAnA2it?usp=sharing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "96c2496d-aca9-4eb2-980e-643140199f96",
    "metadata": {},
    "source": [
